# ETL-POC

./: .gitignore  DESIGN.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: assess.yaml  config.yaml
dita_etl/: __init__.py  classify.py  cli.py  config.py  contracts.py  hashing.py  io_utils.py  logging_config.py  orchestrator.py  pipeline.py  runners.py
dita_etl/assess/: __init__.py  assess_config.py  config.py  dedupe.py  emit.py  features.py  inventory.py  predict.py  report.py  scoring.py  structure.py
dita_etl/extractors/: __init__.py  base.py  docx_oxygen.py  docx_pandoc.py  html_pandoc.py  md_pandoc.py  registry.py
dita_etl/io/: __init__.py  filesystem.py  subprocess_runner.py
dita_etl/stages/: __init__.py  assess.py  base.py  extract.py  load.py  transform.py
dita_etl/stages/extractors/: base.py  docx_oxygen.py  docx_pandoc.py  html_pandoc.py  md_pandoc.py
dita_etl/transforms/: __init__.py  classify.py  dita.py
docs/: 404.html  DESIGN.md  about-the-design-of-the-app.md  configuration.md  etl-design-and-structure.md  etl-how-to-markdown.md  etl-how-to-read-the-assessment.md  etl-pipeline-overview.md  index.html  index.md  objects.inv  user-guide.md
docs/api/: assess.md  config.md  contracts.md  pipeline.md  transforms.md
docs/api/assess/: index.html
docs/api/config/: index.html
docs/api/contracts/: index.html
docs/api/pipeline/: index.html
docs/api/transforms/: index.html
docs/configuration/: index.html
docs/design-project/: about-the-design-of-the-app.md  etl-design-and-structure.md  project.md
docs/design-project/about-the-design-of-the-app/: index.html
docs/design-project/etl-design-and-structure/: index.html
docs/design-project/note-about-complex-tables/: index.html
docs/design-project/project/: index.html
docs/manual/: etl-how-to-change-source.md  etl-how-to-markdown.md  etl-how-to-read-the-assessment.md  how-to-change-extractor-specify-source-content.md
docs/manual/etl-how-to-change-source/: index.html
docs/manual/etl-how-to-markdown/: index.html
docs/manual/etl-how-to-read-the-assessment/: index.html
docs/manual/how-to-change-extractor-specify-source-content/: index.html
docs/pipeline/: index.html
docs/search/: search_index.json
docs/stages/: index.html
docs/white-papers/etl-framework-for-evaluating-etl-processes/: index.html
docs/white-papers/etl-pipeline-overview/: index.html
docs/white-papers/etl-user-manual/: index.html
sample_data/input/: sample.md
scripts/: cli.py
site/: configuration.md  index.md  pipeline.md  stages.md
site/api/: assess.md  config.md
site/design-project/: about-the-design-of-the-app.md  note-about-complex-tables.md
site/manual/: etl-how-to-change-source.md  how-to-change-extractor-specify-source-content.md
site/white-papers/: etl-framework-for-evaluating-etl-processes.md  etl-user-manual.md
tests/: test_extractors.py  test_pipeline.py
tests/integration/: test_pipeline.py
tests/unit/: test_classify.py  test_cli.py  test_config.py  test_contracts.py  test_dedupe.py  test_dita.py  test_extract_stage.py  test_extractors.py  test_features.py  test_filesystem.py  test_load_stage.py  test_logging_config.py  test_scoring.py  test_structure.py  test_subprocess_runner.py  test_transform_stage.py
xsl/: docbook2dita.xsl
