[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dita-etl-pipeline"
version = "0.1.0"
description = "Modular ETL pipeline to convert multiple formats into DITA 1.3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "prefect>=2.16.0",
  "pyyaml>=6.0.1",
  "lxml>=5.2.2",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["dita_etl"]   # <-- only install this package

[tool.pytest.ini_options]
addopts = "-q --cov=dita_etl --cov-report=term-missing --no-header --disable-warnings"
testpaths = ["tests"]